# ComfyUI-Lumina-Next-SFT-DiffusersWrapper

./: README.md  __init__.py  environment_details.txt  install.py  lumina-diffusers-issue.md  lumina_diffusers_node.py  lumina_utils.py  pyproject.toml  requirements.txt  utils.py
examples/: Lumina-Next-SFT-DIffusers - Basic Generation.json  Lumina-Next-SFT-Diffuers-Image2Prompt-OllamaV.json  Lumina-Next-SFT-Diffusers - Basic TXT2IMG Generation.json  Lumina-Next-SFT-Diffusers 2 SDXL-Lightning (Iterative Upscaler).json  Lumina-Next-SFT2SDXL-Lightning-IterativeUIpscale.json
